--- a/styles/AfficheCard.module.css
+++ b/styles/AfficheCard.module.css
@@ -43,5 +43,5 @@
   transition: transform 0.5s ease, filter 0.5s ease, opacity 0.5s ease;
   display: block;
   width: auto; /* Assurez-vous que l'image s'étend à la taille de son conteneur */
-  max-height : 300px ;  
+  max-height : 30vh ;  
 }
