--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -32,14 +32,14 @@
   display: flex;
   gap: 16px;
   height: 50px;
-  width: auto;
+  width: 100vw;
   justify-content: center;
-  align-items: center;
+  align-items: center;  
   padding: 16px;
-  font-size: 24px;
-  color: white;
- 
+  color: white; 
+
 }
+
 
 .menuItem {
   display: flex;
@@ -55,4 +55,27 @@
   font-weight: bold;
   opacity: 1;
 
+}
+
+
+
+/* Pour les écrans de taille moyenne à grande */
+@media screen and (min-width: 768px) {
+  .menu {
+    font-size: 24px; /* Taille de texte par défaut pour les écrans moyens à grands */
+  }
+
+  .header {
+    font-size: 24px; /* Taille de texte par défaut pour les écrans moyens à grands */
+  }
+}
+
+/* Pour les petits écrans comme les smartphones */
+@media screen and (max-width: 767px) {
+  .menu {
+    font-size: 10px; /* Réduire la taille du texte pour les petits écrans */
+  }
+  .header {
+    font-size: 10px; /* Taille de texte par défaut pour les écrans moyens à grands */
+  }
 }
