fin page detail tableaux

--- a/styles/Affiches.module.css
+++ b/styles/Affiches.module.css
@@ -23,3 +23,11 @@
   display: flex; 
 }
 
+
+.searchContainer {
+display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 32px; 
+}
+ 
