--- a/styles/TableauDetail.module.css
+++ b/styles/TableauDetail.module.css
@@ -8,37 +8,36 @@
   gap: 80px;
   color: white;
   flex-wrap: wrap;
-    overflow: auto;
+  overflow: auto;
 }
 
 .tableau {
   max-height: 75vh;
-  max-width: 75vw;
+  max-width: 80vw;
 }
 
 .tableauVisual {
   max-height: 75vh;
-  max-width: 75vw;
+  max-width: 80vw;
   border: 8px solid #fff;
   /* Simuler un cadre autour du tableau */
   border-radius: 16px;
   transform: perspective(800px) rotateY(12deg) scale(0.8) rotateX(10deg);
   opacity: 0.5;
   transition: 0.6s ease all;
- }
+}
 
 .tableauVisual:hover {
   transform: perspective(800px) rotateY(-12deg) translateY(-12px) rotateX(10deg) scale(0.9);
   opacity: 1;
- }
+}
 
 .desc {
   display: flex;
   flex-direction: column;
   align-items: center;
   opacity: 0.5;
-  width: 60vw;
-  height: 30vh;
+  max-width: 80vw;
   gap: 16px;
 }
 
@@ -57,6 +56,17 @@
 
 .description {
   font-size: 16px;
-  padding: 32px 0px;
   text-align: justify;
 }
+ @media (min-width: 900px) {
+
+   /* Ajustez 900px selon le point de rupture souhaité */
+   .tableau,
+   .tableauVisual {
+     max-width: 49vw;
+   }
+
+   .desc {
+     max-width: 50vw;
+   }
+ }
