--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -35,7 +35,7 @@
   width: 100vw;
   justify-content: center;
   align-items: center;  
-  padding: 16px;
+  padding-bottom: 32px;
   color: white; 
 
 }
