--- a/styles/Photos.module.css
+++ b/styles/Photos.module.css
@@ -1,18 +1,17 @@
 .page {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
+}
+
+.photoContainer {
+  display: flex;
+  justify-content: center;
+  overflow: auto;
+  height: 80vh;
 }
 
 .photos {
-  display: flex;
-  align-items: center;
-  gap: 16px; 
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 8px;
-  padding-top: 80px;
-  overflow: auto;
- 
+  width: 95vw;
 }
 
 .title {
@@ -20,6 +19,5 @@
 }
 
 .photoItem {
-  display: flex;  
+  display: flex;
 }
-
