--- a/styles/Upload.module.css
+++ b/styles/Upload.module.css
@@ -1,22 +1,33 @@
 .page {
-    display : flex ; 
+    display: flex;
     flex-direction: column;
     align-items: center;
     background-color: white;
     height: 100vh;
-    width: 100vw ; 
-    gap : 16px ; 
+    width: 100vw;
+    gap: 16px;
 }
 
 .selecteur {
-    padding: 32px ;
-    width : 80vw ; 
+    padding: 32px 0px;
+    width: 20vw;
     min-width: 200px;
-    height : auto;
 }
 
 
 .title {
     font-size: 32px;
-    padding: 16px 0px ; 
+    padding: 16px 0px;
+}
+
+.formContainer {
+    display: flex; 
+    overflow: auto;
+    margin-bottom: 16px;
+}
+
+.logout {
+    display: flex;
+    align-self: flex-end;
+    padding: 16px;
 }
