--- a/styles/UploadAffiche.module.css
+++ b/styles/UploadAffiche.module.css
@@ -1,13 +1,15 @@
 .page {
     background-color: white;
-    height: 100vh;
-    width: 100vw ; 
+    width: 100vw;
 }
 
 .uploadForm {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px; 
-  }
-  
+    gap: 16px;
+}
+
+.formItem {
+    width: 50vw;
+}
