--- a/styles/UploadTableau.module.css
+++ b/styles/UploadTableau.module.css
@@ -1,6 +1,5 @@
 .page {
     background-color: white;
-    height: 100vh;
     width: 100vw ; 
 }
 
@@ -9,5 +8,9 @@
     flex-direction: column;
     align-items: center;
     gap: 16px; 
+  }
+
+  .formItem {
+    width: 50vw; 
   }
   
