modif barre de recherche

--- a/styles/Affiches.module.css
+++ b/styles/Affiches.module.css
@@ -27,6 +27,7 @@
 .searchContainer {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 16px;
   padding: 16px 0px;
 }
