changement route delete affiches

--- a/styles/Photos.module.css
+++ b/styles/Photos.module.css
@@ -21,3 +21,22 @@
 .photoItem {
   display: flex;
 }
+
+.photoFullPage {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.photoFullPage img {
+  max-width: 80%;
+  max-height: 80%;
+  object-fit: contain;
+}
