--- a/styles/AdminFichiers.module.css
+++ b/styles/AdminFichiers.module.css
@@ -10,7 +10,10 @@
 }
 
 .table {
-    width: 95vw;
+    display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 90vw;
 }
 
 .navigation {
@@ -18,6 +21,7 @@
     align-items: center;
     justify-content: center;
     gap: 16px;
+    padding-top: 16px;
 }
 
 .itemNav {
