--- a/styles/Affiches.module.css
+++ b/styles/Affiches.module.css
@@ -31,3 +31,22 @@
   gap: 16px;
   padding: 16px 0px;
 }
+
+.photoFullPage {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.photoFullPage img {
+  max-width: 80%;
+  max-height: 80%;
+  object-fit: contain;
+}
